--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
 	<!-- Заголовок страницы в браузере -->
-	<title>Новая страница</title>
+	<title>Новая страницsadasdа</title>
 	<!-- Подключаем CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 	<!-- Кодировка страницы -->
